--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.8.3",
+    "joy": "^0.1.1",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
     "sequelize": "^6.28.0"
